# FlowSets

./: .gitignore  README.md  flowset.py  pip_requirements.txt  pyproject.toml  seurat_util_functions.R
benchmark/: SPARSim_dataset.Rmd  simulated_changingGenes_random.tsv  simulated_changingPathways_random.tsv
benchmark_proc/: ReactomePathways_filtered.gmt  Untitled.ipynb  functions.R  go_human_filtered.bp.gmt  prepare_data.ipynb  run_wgcna.R  sc_simulated_expression_data_newmffunctions.ipynb  simulated_changingGenes_random.tsv  simulated_changingPathways_random.tsv
benchmark_proc/confusion_matrices/: Genes_pattern1_crisp.csv  Genes_pattern1_gaussian.csv  Genes_pattern1_wgcna.csv  Genes_pattern2_triangular.csv  Genes_pattern2_wgcna.csv  Genes_pattern3_gaussian.csv  Genes_pattern3_triangular.csv  Pathways_pattern1_gaussian.csv  Pathways_pattern1_triangular.csv  Pathways_pattern2_crisp.csv  Pathways_pattern2_gaussian.csv  Pathways_pattern2_triangular.csv  Pathways_pattern3_gaussian.csv  Pathways_pattern3_triangular.csv
benchmark_proc/confusion_matrices_old/: Genes_pattern1_gaussian.csv  Genes_pattern1_wgcna.csv  Genes_pattern2_crisp.csv  Genes_pattern3_crisp.csv  Genes_pattern3_wgcna.csv  Pathways_pattern1_crisp.csv  Pathways_pattern3_gaussian.csv
examples/: .gitignore  go_human.bp.gmt  sc_ddiff.ipynb  sc_expression_data.ipynb  tcga_example.ipynb
examples/sccovid_data/de_comparison_B-cells-memory-Immune-system/: cluster_B-cells-memory-Immune-system_1.cells_sympt_cells_asympt.tsv  cluster_B-cells-memory-Immune-system_1.cells_sympt_cells_asympt.xlsx  cluster_B-cells-memory-Immune-system_2.cells_sympt_cells_asympt.tsv  cluster_B-cells-memory-Immune-system_2.cells_sympt_cells_asympt.xlsx  cluster_B-cells-memory-Immune-system_3.cells_sympt_cells_asympt.tsv  cluster_B-cells-memory-Immune-system_3.cells_sympt_cells_asympt.xlsx  combined_de_result.tsv
examples/sccovid_data/de_comparison_B-cells-naive-Immune-system/: cluster_B-cells-naive-Immune-system_1.cells_sympt_cells_asympt.tsv  cluster_B-cells-naive-Immune-system_1.cells_sympt_cells_asympt.xlsx  cluster_B-cells-naive-Immune-system_2.cells_sympt_cells_asympt.tsv  cluster_B-cells-naive-Immune-system_2.cells_sympt_cells_asympt.xlsx  cluster_B-cells-naive-Immune-system_3.cells_sympt_cells_asympt.tsv  cluster_B-cells-naive-Immune-system_3.cells_sympt_cells_asympt.xlsx  combined_de_result.tsv
flowsets/: __init__.py  flowsets.py
paper_examples/: poster_calculation.ipynb
scanpy_usecase/: convert_hlca_mac_to_seurat.ipynb  scanpy_hlca_subset_macrophages.ipynb  scanpy_wrapper.ipynb
small_example/: Flowsets_ORA.ipynb  Flowsets_different_inputs.ipynb  Flowsets_example.ipynb  deseq2_counts_25deg.tsv  deseq2_counts_37deg_10min.tsv  deseq2_results_37deg_10min_all_comparisons.csv  goslim.gmt  prepare_input.ipynb
tutorial/: Flowsets_ORA.ipynb  Flowsets_different_inputs.ipynb  Flowsets_example.ipynb
tutorial/data/: complex_yeast_heatshock.tsv  deseq2_results_25deg_all_comparisons.csv  deseq2_results_25deg_all_comparisons_cleaned.csv  deseq2_sample_info_25deg.tsv  deseq2_sample_info_37deg_10min.tsv  prepare_input.ipynb
(+53 files in other folders)
