[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-fancy-pypi-readme",
  "hatchling",
]

[project]
name = "flowsets"
version = "0.0.9"
authors = [
  { name="Felix Offensperger", email="offensperger@bio.ifi.lmu.de" },
  { name="Markus Joppich", email="joppich@lmu.de" },
]
description = "Flowsets is a revolutionary way to analyse and visualize time-dependent data using fuzzy sets."
dynamic = ["readme"]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "argcomplete~=3.2.1",
    "arrow~=1.3.0",
    "asttokens~=3.0.0",
    "attrs~=24.1.0",
    "click~=8.1.7",
    "comm~=0.2.2",
    "contourpy~=1.3.1",
    "cycler~=0.12.1",
    "debugpy~=1.8.11",
    "decorator~=5.1.1",
    "executing~=2.1.0",
    "fonttools~=4.55.3",
    "ics~=0.7.2",
    "ipykernel~=6.29.5",
    "ipython~=8.31.0",
    "jedi~=0.19.2",
    "joblib~=1.4.2",
    "jupyter_client~=8.6.3",
    "jupyter_core~=5.7.2",
    "kiwisolver~=1.4.8",
    "matplotlib~=3.10.0",
    "matplotlib-inline~=0.1.7",
    "natsort~=8.4.0",
    "nest-asyncio~=1.6.0",
    "networkx~=3.4.2",
    "numpy~=2.2.1",
    "packaging~=23.2",
    "pandas~=2.2.3",
    "parso~=0.8.4",
    "patsy~=1.0.1",
    "pexpect~=4.9.0",
    "pillow~=11.1.0",
    "pip~=23.2.1",
    "pipx~=1.4.0",
    "platformdirs~=4.1.0",
    "plotly~=5.24.1",
    "polars~=1.19.0",
    "progressbar~=2.5",
    "prompt_toolkit~=3.0.48",
    "psutil~=6.1.1",
    "ptyprocess~=0.7.0",
    "pure_eval~=0.2.3",
    "pyarrow~=19.0.0",
    "Pygments~=2.19.1",
    "pyparsing~=3.2.1",
    "python-dateutil~=2.9.0.post0",
    "pytz~=2024.2",
    "pyzmq~=26.2.0",
    "scikit-fuzzy~=0.5.0",
    "scikit-learn~=1.6.1",
    "scipy~=1.15.1",
    "seaborn~=0.13.2",
    "setuptools~=68.1.2",
    "six~=1.16.0",
    "stack-data~=0.6.3",
    "statsmodels~=0.14.4",
    "TatSu~=5.12.1",
    "tenacity~=9.0.0",
    "threadpoolctl~=3.5.0",
    "tornado~=6.4.2",
    "traitlets~=5.14.3",
    "types-python-dateutil~=2.9.0.20240316",
    "tzdata~=2024.2",
    "userpath~=1.9.1",
    "wcwidth~=0.2.13",
    "yt-dlp~=2025.1.26"
]



[tool.hatch.build.targets.sdist]
include = [
  "flowsets",
  "tests",
  "*.md",
  "*.R"
]
exclude = ["benchmark_proc"]

[tool.hatch.build.targets.wheel]
packages = [
  "flowsets",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = 'text/markdown'
fragments = [
    {path = "README.md"}
]
substitutions = [
    {pattern = "https://github.com/mjoppich/FlowSets/blob", replacement = "https://raw.githubusercontent.com/mjoppich/FlowSets/refs/heads"},
]

[tool.hatch.build]
skip-excluded-dirs = true


[project.urls]
Homepage = "https://github.com/mjoppich/flowsets"
Issues = "https://github.com/mjoppich/flowsets/issues"